tree-sitter-lkr/grammar.js
    program: $ => repeat(
      choice(
        $.import_statement,
        $._statement,
      ),
    ),

    // ── Comments ──────────────────────────────────────────────────────
    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_-]*/,
    type_identifier: $ => /[a-zA-Z_][a-zA-Z0-9_-]*/,

    // ── Literals ───────────────────────────────────────────────────────
    integer_literal: $ => /[0-9]+/,
    nil_literal: $ => 'nil',

    _full_expression: $ => choice(
      $._expression,
      $.ternary_expression,
    ),

    primary_expression: $ => choice(
      $.identifier,
      $.integer_literal,
      $.float_literal,
      $.boolean_literal,
      $.nil_literal,
      $.string_literal,
      $.list_expression,
      $.map_expression,
      $.struct_literal,
      $.parenthesized_expression,
      $.call_expression,
      $.field_access,
      $.index_access,
      $.optional_field_access,
      $.optional_index_access,
    ),

    pattern: $ => choice(
      $.wildcard_pattern,
      $.literal_pattern,
      $.identifier_pattern,
      $.list_pattern,
      $.map_pattern,
      $.or_pattern,
      $.guarded_pattern,
      $.range_pattern,
    ),

    identifier_pattern: $ => $.identifier,

    _type: $ => choice(
      $.primitive_type,
      $.list_type,
      $.map_type,
      $.function_type,
      $.optional_type,
      $.union_type,
      $.named_type,
      $.type_identifier,
    ),

    primitive_type: $ => choice('Int', 'Float', 'String', 'Bool', 'Nil', 'Any'),

    _statement: $ => choice(
      $.import_statement,
      $.let_statement,
      $.define_statement,
      $.assignment_statement,
      $.compound_assignment_statement,
      $.if_statement,
      $.while_statement,
      $.for_statement,
      $.function_definition,
      $.struct_definition,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.expression_statement,
      $.block,
    ),

    import_statement: $ => choice(
      seq('import', $.identifier, optional(seq('as', $.identifier)), ';'),
      seq('import', $.string_literal, optional(seq('as', $.identifier)), ';'),
      seq('import', '{', $.import_item, repeat(seq(',', $.import_item)), optional(','), '}', 'from', choice($.identifier, $.string_literal), ';'),
      seq('import', '*', 'as', $.identifier, 'from', choice($.identifier, $.string_literal), ';'),
    ),

    let_statement: $ => seq(
      'let',
      $.pattern,
      optional(seq(':', $._type)),
      '=',
      $._full_expression,
      ';',
    ),

    struct_definition: $ => seq(
      'struct',
      $.type_identifier,
      '{',
      optional(seq(
        $.struct_field,
        repeat(seq(',', $.struct_field)),
        optional(','),
      )),
      '}',
    ),

    struct_field: $ => seq(
      $.identifier,
      optional(seq(':', $._type)),
    ),
