tree-sitter-lkr/test/corpus/lkr.txt
================================================================================
// Import
================================================================================

import math;

---

(program
  (import_statement
    (identifier)))

================================================================================
// Struct
================================================================================

struct User { id: Int }

---

(program
  (struct_definition
    (type_identifier)
    (struct_field
      (identifier)
      (primitive_type))))

================================================================================
// Variables
================================================================================

let x = 1;

---

(program
  (let_statement
    (pattern
      (identifier_pattern
        (identifier)))
    (primary_expression
      (integer_literal))))

================================================================================
// Nil
================================================================================

let c = nil;

---

(program
  (let_statement
    (pattern
      (identifier_pattern
        (identifier)))
    (primary_expression
      (nil_literal))))